--- a/requirements.txt
+++ b/requirements.txt
@@ -6,24 +6,30 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+contourpy==1.3.2
 cryptography==44.0.2
+cycler==0.12.1
+fonttools==4.57.0
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
 narwhals==1.34.0
 numpy==2.2.4
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+plotly==6.0.1
 protobuf==5.29.4
 pyarrow==19.0.1
 pycparser==2.22
 pydeck==0.9.1
 PyMySQL==1.1.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
